# lucciola

./: .clang-format  .clangd  .gitignore  CMakeLists.txt
benchmarks/: async_bench.cc  basic_bench.cc  benchmark_client.cc  benchmark_server.cc
docs/: qwen_operators_guide.md  vLLM_architecture_design.md
docs/benchmarks/: v1.md  v2.md  v3.md  v4-flash-attn-v1.md
examples/: async_server_mock.cc  http_server.cc  qwen.cc  qwen_dynamic.cc  qwen_example.cc
include/: async_engine.h  block_manager.h  gpu_arena.h  qwen.h  safetensores.h  scheduler.h  sequence.h  tensor.h  tokenizer.h  types.h
include/kernels/: add.h  argmax.h  attention.h  embedding.h  flash_attention.h  linear.h  rmsnorm.h  rope.h  swiglu.h  util.h
include/kernels/learn/: sgemm.h  softmax.h
learn/: sgemm.cc
learn/softmax/: main.cc
src/: async_engine.cc  block_manager.cc  gpu_arena.cc  qwen.cc  safetensors.cc  scheduler.cc  sequence.cc  tokenizer.cc
src/kernels/: add.cu  argmax.cu  attention.cu  attention_paged.cu  embedding.cu  flash_attention.cu  linear.cu  rmsnorm.cu  rope.cu  swiglu.cu
src/kernels/learn/: sgemm.cu  softmax.cu
